--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -569,6 +569,9 @@ bind_container_http_tcp_bind_port: ''
 # The base container network. It will be auto-created by this role if it doesn't exist already.
 bind_container_network: "{{ bind_identifier }}"
 
+# Control if the container network is deleted on uninstalling.
+bind_container_network_deletion_enabled: true
+
 # A list of additional container networks that the container would be connected to.
 # The role does not create these networks, so make sure they already exist.
 # Use this to expose this container to another reverse proxy, which runs in a different container network.
